# duapi

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
electron/main/: index.ts
electron/preload/: index.ts
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: docgen.rs  http.rs  importer.rs  lib.rs  main.rs  models.rs  store.rs  update.rs
src/components/: DocEditor.tsx  DocManager.tsx  ExportPage.tsx  KeyValueEditor.tsx  Navigation.tsx  ParamsDocs.tsx  RequestBar.tsx  RequestPanel.tsx  RequestTabs.tsx  ResponsePanel.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  WysiwygEditor.tsx  ui.tsx
src/lib/: api.ts  docExport.ts
src/store/: ApiContext.tsx  AppContext.tsx
src/styles/: global.css
src/types/: electron.d.ts  index.ts
src/utils/: converters.ts  storage.ts  useColumnResize.ts
