[package]
name = "duapi"
version = "0.1.0"
description = "duapi - offline API debugging and documentation tool"
authors = ["duhuilai"]
edition = "2021"

[lib]
name = "duapi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
  "gzip",
  "brotli",
  "deflate",
  "multipart",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
